fixed alignment on home

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -424,7 +424,7 @@ nav img{
         position:absolute;
         text-align: center;
         right: 0px;
-        top: 0px;
+        top: 15%;
         transform: translate(-50%, 0%);
 
     }
