--- a/assets/style/subfolder/home.css
+++ b/assets/style/subfolder/home.css
@@ -311,11 +311,7 @@ footer{
         
     }
     
-    #about{
-        
-       
- 
-    }
+
 
     #introListUl{
         list-style-type: none;
@@ -461,7 +457,7 @@ footer{
     #introListUl li{
         
        
-        padding-top: 80px;
+        padding-top: 50px;
         padding-left: 5%;
         padding-right: 5%;
         animation-name: titleMoveIn;
@@ -924,8 +920,12 @@ footer{
 }
 
 
-@media only screen and (max-height: 641px) {
+@media only screen and (max-height: 667px) {
  
+    li {
+        padding-top: 0px;
+    }
+
     #about{
         
         font-weight: 100;
@@ -937,7 +937,7 @@ footer{
    
     
     .card {
-        height: 475px;
+        height: 250px;
        
         border-radius: 20px;
     
